--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- font awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- link css -->
         <link rel="stylesheet" href="css/style.css">
 
@@ -12,6 +14,26 @@
     </head>
     <body>
         
+        <!-- container principale -->
+        <div class="container">
+
+            <!-- carousel container-->
+            <div class="carousel-container">
+
+                <!-- prev/next buttons  -->
+                <div class="prev"><i class="fa-solid fa-chevron-up"></i></div>
+                <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
+
+                <!-- images -->
+                <div class="item active"><img src="img/01.jpg" alt="img"></div>
+                <div class="item"><img src="img/02.jpg" alt="img"></div>
+                <div class="item"><img src="img/03.jpg" alt="img"></div>
+                <div class="item"><img src="img/04.jpg" alt="img"></div>
+                <div class="item"><img src="img/05.jpg" alt="img"></div>
+            </div>
+        </div>
+
+        <!-- link js -->
         <script src="js/main.js"></script>
     </body>
 </html>
