--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
         <div class="container">
 
             <!-- carousel container-->
-            <div class="carousel-container">
+            <div id="carousel-container">
 
                 <!-- prev/next buttons  -->
                 <div class="prev"><i class="fa-solid fa-chevron-up"></i></div>
                 <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
 
                 <!-- images -->
-                <div class="item active"><img src="img/01.jpg" alt="img"></div>
+
+                <!-- <div class="item"><img src="img/01.jpg" alt="img"></div>
                 <div class="item"><img src="img/02.jpg" alt="img"></div>
                 <div class="item"><img src="img/03.jpg" alt="img"></div>
                 <div class="item"><img src="img/04.jpg" alt="img"></div>
-                <div class="item"><img src="img/05.jpg" alt="img"></div>
+                <div class="item"><img src="img/05.jpg" alt="img"></div> -->
             </div>
         </div>
 
