--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <!-- images -->
 
-                <!-- <div class="item"><img src="img/01.jpg" alt="img"></div>
+                <!-- <div class="item active"><img src="img/01.jpg" alt="img"></div>
                 <div class="item"><img src="img/02.jpg" alt="img"></div>
                 <div class="item"><img src="img/03.jpg" alt="img"></div>
                 <div class="item"><img src="img/04.jpg" alt="img"></div>
