--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div id="carousel-container">
 
                 <!-- prev/next buttons  -->
-                <div class="prev"><i class="fa-solid fa-chevron-up"></i></div>
-                <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
+                <div class="prev" id="up"><i class="fa-solid fa-chevron-up"></i></div>
+                <div class="next" id="down"><i class="fa-solid fa-chevron-down"></i></div>
 
                 <!-- images -->
 
